# AIPscan

./: .codecov.yml  .coveragerc  .djlintrc  .dockerignore  .gitignore  .markdownlint.jsonc  .pre-commit-config.yaml  .travis.yml  CONTRIBUTING.md  Dockerfile  INSTALL.md  Makefile  README.md  USAGE.md  am_ss_requests.py  app.py  build.py  celery_config.py  config.py  create_aipscan.db.py  create_db.py  docker-compose.am-network.yml  docker-compose.yml  flask_celery.py  main.py  manage.py  mets_2_json.py  mets_reader.py  package-lock.json  package.json  pyproject.toml  readme.md  requirements.txt  run.py  threat_model.yaml  tox.ini  webpack.config.js
.github/: dependabot.yml
.github/actions/: validate-pep440-version.yml
.github/actions/release/: action.yml  release.sh
.github/actions/validate-pep440-version/: action.yml
.github/actions/validate-semver/: action.yml
.github/workflows/: release.yml  test.yml  threagile.yml  validate-action-pinning.yml
.init-scripts/: aipscan.sql  entrypoint.sh
.init-scripts/mysql/: aipscan.sql
AIPscan/: CLI_am_ss_requests.py  CLI_mets_2_json.py  __init__.py  add_sample_data.py  am_ss_requests.py  application.py  celery.py  cli.py  config.py  conftest.py  decorators.py  extensions.py  forms.py  helpers.py  mets_2_sql.py  models.py  navbar.py  run.py  tasks.py  test_helpers.py  typesense_helpers.py  typesense_test_helpers.py  views.py  worker.py
AIPscan/API/: fields.py  namespace_data.py  namespace_infos.py  namespace_report_data.py  views.py
AIPscan/Aggregator/: __init__.py  celery_helpers.py  database_helpers.py  downloads.py  forms.py  mets_parse_helpers.py  task_helpers.py  tasks.py  types.py  views.py
AIPscan/Aggregator/templates/: confirm.html  edit_storage_service.html  result_message.html  storage_service.html  storage_services.html
AIPscan/Aggregator/tests/: __init__.py  test_database_helpers.py  test_mets.py  test_storage_service.py  test_task_helpers.py  test_tasks.py  test_types.py  test_views.py
AIPscan/Charts/: callbacks.py  create_menus.py  layout.py  sample_data.py
AIPscan/Charts/assets/: base.css
AIPscan/Data/: __init__.py  data.py  fields.py  report_data.py  report_data_typesense.py
AIPscan/Data/tests/: __init__.py  conftest.py  test_agents_transfers.py  test_aip_contents.py  test_aips_by_format.py  test_aips_by_puid.py  test_bayesian_format_modeling_data.py  test_format_versions_count.py  test_formats_count.py  test_largest_aips.py  test_largest_files.py  test_preservation_derivatives.py  test_storage_locations.py
AIPscan/Home/: views.py
AIPscan/Reporter/: __init__.py  database_helpers.py  helpers.py  report_aip_contents.py  report_aips_by_format.py  report_aips_by_puid.py  report_bayesian_modeling.py  report_format_versions_count.py  report_formats_count.py  report_ingest_log.py  report_largest_aips.py  report_largest_files.py  report_originals_with_derivatives.py  report_preservation_derivatives.py  report_storage_locations.py  request_params.py  views.py
AIPscan/Reporter/templates/: aip.html  aip_contents.html  aips.html  bayesian_rug_plot.html  chart_aips_by_format.html  chart_formats_count.html  file.html  plot_formats_count.html  report_aip_contents.html  report_aips_by_format.html  report_aips_by_puid.html  report_buttons.html  report_buttons_print_only.html  report_format_versions_count.html  report_formats_count.html  report_ingest_log_gantt.html  report_ingest_log_tabular.html  report_largest_aips.html  report_largest_files.html  report_originals_derivatives.html  report_preservation_derivatives.html  report_storage_locations.html  report_storage_locations_usage_over_time.html  reports.html  view_aip.html  view_aips.html  view_copies.html  view_copy.html  view_file.html  view_original.html
AIPscan/Reporter/tests/: test_aip_contents.py  test_aips_by_file_format.py  test_aips_by_puid.py  test_bayesian_format_modeling.py  test_format_versions_count.py  test_formats_count.py  test_helpers.py  test_ingest_log.py  test_largest_aips.py  test_largest_files.py  test_preservation_derivatives.py  test_storage_locations.py  test_update_dates.py  test_views.py
AIPscan/User/: forms.py  views.py
AIPscan/migrations/: alembic.ini  env.py  script.py.mako
AIPscan/migrations/versions/: c605f2284613_initial_migration.py
AIPscan/static/css/: custom.css  style_ingest_log.css
AIPscan/static/js/: base.entry.js  datatables.entry.js  report.js  report_base.entry.js  tasks.js  typesense.js
AIPscan/templates/: add_sample_data.html  base.html  datatable.html  edit_storage_service.html  report_base.html  report_file_formats.html  storage_service.html  storage_services.html  view_aip.html  view_aips.html  view_fetch_jobs.html
AIPscan/templates/error/: 404.html
AIPscan/templates/partials/: navbar.html
AIPscan/tests/: test_app.py  test_celery_config.py  test_cli.py  test_helpers.py  test_models.py  test_typesense_helpers.py  test_typsense_test_helpers.py
AIPscope/: __init__.py  add_sample_data.py  mets_2_json.py  models.py  views.py
AIPscope/templates/: add_sample_data.html  base.html  fetch_jobs.html  list_fetch_jobs.html  view_aips.html
build_config/: base.config.js  chart_formats_count.config.js  plot_formats_count.config.js  report_base.config.js
build_config/entry/: base.entry.js  chart_formats_count.entry.js  plot_formats_count.entry.js  report_base.entry.js
build_config/entry/shared/: base_shared.js
docker/: entrypoint.sh
docs/: AIPscan.Aggregator.rst  AIPscan.Reporter.rst  conf.py  modules.rst  overview.rst  release 0.7.0_0.8.0 Beta.0 Beta.md  usage.md
docs/_build/doctrees/: AIPscan.API.doctree  AIPscan.Aggregator.doctree  AIPscan.Aggregator.tests.doctree  AIPscan.Data.doctree  AIPscan.Data.tests.doctree  (+8 more)
requirements/: base.txt  dev.txt  test.txt
templates/: base.html  home.html
tools/: fetch_aips  fetch_aips.py  generate-test-data  generate_db_docs  index-data  index-key  index-refresh  index-summary  mets-import
tools/app/: cli.py  init.py
tools/helpers/: data.py  fetch.py
tools/tests/: test_data.py
(+78 files in other folders)
